# ferrum-vault

./: .env  Cargo.toml  README.md  config.toml  vault.db
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/dev/lucalewin/ferrumvault/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/lucalewin/ferrumvault/: MainActivity.kt
android/app/src/main/java/dev/lucalewin/ferrumvault/api/: Passwords.kt
android/app/src/main/java/dev/lucalewin/ferrumvault/ui/: PasswordView.kt
android/app/src/main/java/dev/lucalewin/ferrumvault/ui/theme/: Color.kt  Theme.kt  (+1 more)
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/java/dev/lucalewin/ferrumvault/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: style.css
assets/css/: style.css
assets/js/: script.js
backend/: Cargo.toml
backend/src/: frontend.rs
backend/templates/: index.html  passwords.html
backend/templates/auth/: signin.html
backend/templates/layouts/: base.html
extension/: background.js  manifest.json  popup.html  style.css
frontend/: Cargo.toml
frontend/src/: main.rs
migrations/: 20241023220225_initial.sql
src/: api.rs  auth.rs  cipher.rs  config.rs  db.rs  frontend.rs  main.rs  models.rs
src/api/: mod.rs
src/api/auth/: error.rs  mod.rs
src/api/vault/: mod.rs  passwords.rs
templates/: index.html  view.html
templates/auth/: challenge.html  signin.html
templates/layouts/: base.html
